--- a/index.Rmd
+++ b/index.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Xiang Guo"
+title: "Fang Su"
 image: "xiang.jpg"
 links:
   - label: LinkedIn
@@ -9,7 +9,7 @@ links:
   - label: GitHub
     url: "https://github.com/"
   - label: Email
-    url: "mailto:email@email.com"
+    url: "mailto:fangs@uoregon.edu"
 output:
   postcards::jolla_blue
 ---
@@ -18,3 +18,5 @@ Raised in New Jersey by two lawyers, I am now an aspiring data artist and
 competitive rock climber. I moved to Seattle to fly floatplanes, but I got 
 caught up in the startup world. Send me a WhatsApp message if you have good 
 turnip prices.
+
+
